{
  "version": 4,
  "terraform_version": "1.4.6",
  "serial": 12,
  "lineage": "4d7e28ec-6c44-e302-510f-fe8d457e6c2e",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "tku-default-network-acl",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:418549683327:network-acl/acl-079ad8b932c4a5ed6",
            "default_network_acl_id": "acl-079ad8b932c4a5ed6",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-079ad8b932c4a5ed6",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "418549683327",
            "subnet_ids": [
              "subnet-02f710f1cc7f5738f",
              "subnet-03663557c0a05a7e8",
              "subnet-06ebf5b227240bcb0",
              "subnet-0a2c4e6ff95348f26"
            ],
            "tags": {
              "Name": "tku-default-network-acl"
            },
            "tags_all": {
              "Name": "tku-default-network-acl"
            },
            "vpc_id": "vpc-0fb062f777cce71dd"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "tku-api-eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ee97c046814038ef",
            "arn": "arn:aws:ec2:ap-northeast-1:418549683327:elastic-ip/eipalloc-0ee97c046814038ef",
            "association_id": "eipassoc-08726a29a3d055767",
            "domain": "vpc",
            "id": "eipalloc-0ee97c046814038ef",
            "instance": "i-0089c9339953a2ddb",
            "network_border_group": "ap-northeast-1",
            "network_interface": "eni-06e24dbf2b7d7dce4",
            "private_dns": "ip-172-31-98-210.ap-northeast-1.compute.internal",
            "private_ip": "172.31.98.210",
            "public_dns": "ec2-35-74-57-14.ap-northeast-1.compute.amazonaws.com",
            "public_ip": "35.74.57.14",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "api-eip"
            },
            "tags_all": {
              "Name": "api-eip"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "tku-api-instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-01e9b1393f6f885a6",
            "arn": "arn:aws:ec2:ap-northeast-1:418549683327:instance/i-0089c9339953a2ddb",
            "associate_public_ip_address": true,
            "availability_zone": "ap-northeast-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "ecsInstanceRole",
            "id": "i-0089c9339953a2ddb",
            "instance_initiated_shutdown_behavior": "terminate",
            "instance_lifecycle": "spot",
            "instance_market_options": [
              {
                "market_type": "spot",
                "spot_options": [
                  {
                    "instance_interruption_behavior": "terminate",
                    "max_price": "0.030400",
                    "spot_instance_type": "one-time"
                  }
                ]
              }
            ],
            "instance_state": "running",
            "instance_type": "t2.small",
            "ipv6_address_count": 0,
            "key_name": "tku_rsa",
            "launch_template": [
              {
                "id": "lt-0f9a5668d0e8e1954",
                "name": "ECSLaunchTemplate_npXvZtJEjH68",
                "version": "1"
              }
            ],
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-06e24dbf2b7d7dce4",
            "private_dns": "ip-172-31-98-210.ap-northeast-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.98.210",
            "public_dns": "ec2-35-74-57-14.ap-northeast-1.compute.amazonaws.com",
            "public_ip": "35.74.57.14",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-02f94e86346195664",
                "volume_size": 30,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "public-ecs-sg"
            ],
            "source_dest_check": true,
            "spot_instance_request_id": "sir-yry6sdjq",
            "subnet_id": "subnet-03663557c0a05a7e8",
            "tags": {
              "Name": "ECS Instance - api"
            },
            "tags_all": {
              "Name": "ECS Instance - api"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0ff4e5e1d06014a1f"
            ]
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "tku-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:418549683327:internet-gateway/igw-0f4a3439634f9d649",
            "id": "igw-0f4a3439634f9d649",
            "owner_id": "418549683327",
            "tags": {
              "Name": "tku-igw"
            },
            "tags_all": {
              "Name": "tku-igw"
            },
            "vpc_id": "vpc-0fb062f777cce71dd"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:418549683327:route-table/rtb-06dbc19d5d74aaf08",
            "id": "rtb-06dbc19d5d74aaf08",
            "owner_id": "418549683327",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0f4a3439634f9d649",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public-rt"
            },
            "tags_all": {
              "Name": "public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fb062f777cce71dd"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "db-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:418549683327:security-group/sg-0f46e2e8f9cb77d40",
            "description": "sg for db",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f46e2e8f9cb77d40",
            "ingress": [
              {
                "cidr_blocks": [
                  "153.246.224.21/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0ff4e5e1d06014a1f"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "db-sg",
            "name_prefix": "",
            "owner_id": "418549683327",
            "revoke_rules_on_delete": null,
            "tags": {
              "Name": "db-sg"
            },
            "tags_all": {
              "Name": "db-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fb062f777cce71dd"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "public-ecs-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:418549683327:security-group/sg-0ff4e5e1d06014a1f",
            "description": "sg for public ecs",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ff4e5e1d06014a1f",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "153.246.224.21/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "public-ecs-sg",
            "name_prefix": "",
            "owner_id": "418549683327",
            "revoke_rules_on_delete": null,
            "tags": {
              "Name": "public-ecs-sg"
            },
            "tags_all": {
              "Name": "public-ecs-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fb062f777cce71dd"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "tku-public-subnet-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:418549683327:subnet/subnet-06ebf5b227240bcb0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "172.31.0.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06ebf5b227240bcb0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "418549683327",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "tku-public-subnet-a"
            },
            "tags_all": {
              "Name": "tku-public-subnet-a"
            },
            "vpc_id": "vpc-0fb062f777cce71dd"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "tku-public-subnet-c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:418549683327:subnet/subnet-03663557c0a05a7e8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1c",
            "availability_zone_id": "apne1-az1",
            "cidr_block": "172.31.96.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03663557c0a05a7e8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "418549683327",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "tku-public-subnet-c"
            },
            "tags_all": {
              "Name": "tku-public-subnet-c"
            },
            "vpc_id": "vpc-0fb062f777cce71dd"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "tku-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:418549683327:vpc/vpc-0fb062f777cce71dd",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.31.0.0/16",
            "default_network_acl_id": "acl-079ad8b932c4a5ed6",
            "default_route_table_id": "rtb-06dbc19d5d74aaf08",
            "default_security_group_id": "sg-09eaab678f581a0d8",
            "dhcp_options_id": "dopt-097bc78fe104c124c",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0fb062f777cce71dd",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-06dbc19d5d74aaf08",
            "owner_id": "418549683327",
            "tags": {
              "Name": "tku-vpc"
            },
            "tags_all": {
              "Name": "tku-vpc"
            }
          }
        }
      ]
    }
  ]
}